User validator test class update

--- a/TourismApp/src/main/resources/messages.properties
+++ b/TourismApp/src/main/resources/messages.properties
@@ -17,6 +17,9 @@ UserValidator.INVALID_EMAIL_ID_FORMAT=Invalid Email Id, make sure it is in examp
 #booking validator messages
 Booking.INVALID_CREDENTIALS=Checkin or noOfPeople given are not valid
 
+#destination validator messages
+SearchValidator.INVALID_CONTINENT=not a valid continent
+
 #user service messages
 UserService.INVALID_CREDENTIALS=The contact number or password entered is incorrect. Please check and submit again.
 UserService.CONTACT_NUMBER_ALREADY_EXISTS=The contact number entered already exists. Please login or use a new contact number
@@ -26,6 +29,14 @@ UserService.INVALID_REGISTRATION=Registration failed!Please try again
 #booking service messages
 BookingService.CANNOT_BOOK=cannot book the package
 BookingService.CANNOT_FIND_USER=cannot find booking details for requested user
+
+#destination service messages
+DestinationService.HAVING_NO_DESTINATION=no destination with the given continent
+DestinationService.NO_PACKAGE=no package available
+DestinationService.NO_SPECIALPACKAGE=no package with discount
+
+#Destination details service messages
+DetailsServices.INVALID_DESTINATION_ID=cannot find packages for requested destination id
 
 #user API
 UserAPI.REGISTER_USER_SUCCESS1=Congratulations!
